--- a/kymco_maxxer90_gazebo/package.xml
+++ b/kymco_maxxer90_gazebo/package.xml
@@ -9,5 +9,7 @@
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>roboticsgroup_gazebo_plugins</exec_depend>
+  <exec_depend>message_to_tf</exec_depend>
 
 </package>
