Forced the roboticsgroup_gazebo_plugins in order to not be able to run the Gazebo simulation without having it, since Gazebo does not whine about not finding it...

--- a/kymco_maxxer90_gazebo/CMakeLists.txt
+++ b/kymco_maxxer90_gazebo/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(kymco_maxxer90_gazebo)
 
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+    roboticsgroup_gazebo_plugins
+)
 
 catkin_package()
 
