Again, forcing users to have hector_gazebo_plugins even if it's an exec dependency

--- a/kymco_maxxer90_gazebo/CMakeLists.txt
+++ b/kymco_maxxer90_gazebo/CMakeLists.txt
@@ -3,6 +3,7 @@ project(kymco_maxxer90_gazebo)
 
 find_package(catkin REQUIRED COMPONENTS
     roboticsgroup_gazebo_plugins
+    hector_gazebo_plugins
 )
 
 catkin_package()
