--- a/kymco_maxxer90_control/config/ackermann_control.yaml
+++ b/kymco_maxxer90_control/config/ackermann_control.yaml
@@ -53,4 +53,20 @@ gazebo_ros_control:
             i_clamp: 0.2
             antiwindup: false
             publish_state: true
+        RWD_joint:
+            p: 10.0
+            i: 0.1
+            d: 0.0
+        front_left_wheel:
+            p: 10.0
+            i: 0.1
+            d: 0.0
+        front_right_wheel:
+            p: 10.0
+            i: 0.1
+            d: 0.0
+        steering_wheel_joint:
+            p: 20.0
+            i: 0.1
+            d: 0.0
 
