--- a/kymco_maxxer90_navigation/config/costmap_common_params.yaml
+++ b/kymco_maxxer90_navigation/config/costmap_common_params.yaml
@@ -1,4 +1,4 @@
-# footprint: [ [-0.1,-0.125], [0.5,-0.125], [0.5,0.125], [-0.1,0.125] ]
+footprint: [ [0.65, -0.425],  [-1.0, -0.425], [-1.0, 0.425], [0.65, 0.425] ]
 
 
 transform_tolerance: 0.2
@@ -19,7 +19,7 @@ obstacle_layer:
 
 inflation_layer:
     enabled:              true
-    cost_scaling_factor:  10.0  # exponential rate at which the obstacle cost drops off (default: 10)
+    cost_scaling_factor:  5.0  # exponential rate at which the obstacle cost drops off (default: 10)
     inflation_radius:     0.3  # max. distance from an obstacle at which costs are incurred for planning paths.
 
 static_layer:
