--- a/kymco_maxxer90_navigation/config/ekf_localization.yaml
+++ b/kymco_maxxer90_navigation/config/ekf_localization.yaml
@@ -16,15 +16,15 @@ odom0_queue_size: 10
 odom0_nodelay: false
 odom0_differential: true
 
-# odom1: mono_odometer/odometry
-# odom1_config: [true,  true,  false,
-               # false, false, false,
-               # false, false, false,
-               # false, false, false,
-               # false, false, false]
-# odom1_queue_size: 10
-# odom1_nodelay: false
-# odom1_differential: true
+odom1: mono_odometer/odometry
+odom1_config: [true,  true,  false,
+               false, false, false,
+               false, false, false,
+               false, false, false,
+               false, false, false]
+odom1_queue_size: 10
+odom1_nodelay: false
+odom1_differential: true
 
 imu0: imu/data
 imu0_config: [false, false, false,
