--- a/kymco_maxxer90_navigation/config/global_costmap_params.yaml
+++ b/kymco_maxxer90_navigation/config/global_costmap_params.yaml
@@ -4,6 +4,8 @@ global_costmap:
     update_frequency: 1.0
     publish_frequency: 0.5
     static_map: true
+    resolution: 0.05
+    z_resolution: 0.05
 
     transform_tolerance: 0.5
     plugins:
