--- a/kymco_maxxer90_navigation/config/global_costmap_params.yaml
+++ b/kymco_maxxer90_navigation/config/global_costmap_params.yaml
@@ -2,8 +2,9 @@ global_costmap:
     global_frame: map
     robot_base_frame: base_link
     update_frequency: 1.0
-    publish_frequency: 0.5
+    publish_frequency: 0.0
     static_map: true
+    rolling_window: false
     resolution: 0.05
     z_resolution: 0.05
 
