--- a/kymco_maxxer90_navigation/config/ekf_localization.yaml
+++ b/kymco_maxxer90_navigation/config/ekf_localization.yaml
@@ -2,10 +2,11 @@ odom_frame: odom
 base_link_frame: base_link
 world_frame: odom
 
-two_d_mode: true #false
+two_d_mode: true #false | true <=> 0 stis times sxetikes me Z, roll, pitch
 
 frequency: 50
 
+#odom0 -> navsat_transform_node output | used only for position
 odom0: odometry/gps
 odom0_config: [true,  true,  false,
                false, false, false,
@@ -13,25 +14,26 @@ odom0_config: [true,  true,  false,
                false, false, false,
                false, false, false]
 odom0_queue_size: 10
-odom0_nodelay: false
-odom0_differential: true
+odom0_nodelay: false # isos true vasi paradeigmatos
+odom0_differential: false  #was true, arketa sigouros oti prepei false, theloume apo gps to position
 
-odom1: mono_odometer/odometry
-odom1_config: [true,  true,  false,
-               false, false, false,
-               false, false, false,
-               false, false, false,
-               false, false, false]
-odom1_queue_size: 10
-odom1_nodelay: false
-odom1_differential: true
+#odom1 -> camera, check viso2_ros
+#odom1: mono_odometer/odometry
+#odom1_config: [true,  true,  false,
+#               false, false, false,
+#               false, false, false,
+#               false, false, false,
+#               false, false, false]
+#odom1_queue_size: 10
+#odom1_nodelay: false
+#odom1_differential: true # prosdiorizei kai auto position, tha to xrisimopoiiso gia na bgalo velocity opote true
 
 imu0: imu/data
 imu0_config: [false, false, false,
               true,  true,  true,
               false, false, false,
               true,  true,  true,
-              true,  true,  true]
+              true,  false, false]  # mallon to lathos itan sto y accel, afou den epitrepetai katheti kinisi apeutheias
 imu0_queue_size: 10
 imu0_nodelay: false
 imu0_differential: false
