Added trivial rtabmap support for visual odometry

--- a/kymco_maxxer90_navigation/config/ekf_localization.yaml
+++ b/kymco_maxxer90_navigation/config/ekf_localization.yaml
@@ -4,30 +4,35 @@ world_frame: odom
 
 two_d_mode: true #false | true <=> 0 stis times sxetikes me Z, roll, pitch
 
+dynamic_process_noise_covariance: true
+
 frequency: 50
 
-#odom0 -> navsat_transform_node output | used only for position
+odom0 -> navsat_transform_node output | used for velocity verification : if almost 0, supports no movement, else have probably moved
 odom0: odometry/gps
-odom0_config: [true,  true,  false,
+odom0_config: [true,  true,  true,
                false, false, false,
                false, false, false,
                false, false, false,
                false, false, false]
 odom0_queue_size: 10
 odom0_nodelay: false # isos true vasi paradeigmatos
-odom0_differential: false  #was true, arketa sigouros oti prepei false, theloume apo gps to position
+odom0_differential: true
 
-#odom1 -> camera, check viso2_ros
-#odom1: mono_odometer/odometry
-#odom1_config: [true,  true,  false,
-#               false, false, false,
-#               false, false, false,
-#               false, false, false,
-#               false, false, false]
-#odom1_queue_size: 10
-#odom1_nodelay: false
-#odom1_differential: true # prosdiorizei kai auto position, tha to xrisimopoiiso gia na bgalo velocity opote true
+#odom1 -> camera, check rtabmap
+odom1: mono_odometer/odometry
+odom1_config: [true,  true,  true,
+               false, false, false,
+               false, false, false,
+               false, false, false,
+               false, false, false]
+odom1_queue_size: 10
+odom1_nodelay: false
+# odom1_differential is true in order to find velocities from pose change | preferred this because twist is regarding rgbd_base_link
+odom1_differential: false # prosdiorizei kai auto position, tha to xrisimopoiiso gia na bgalo velocity opote true
 
+#https://answers.ros.org/question/269030/imu-convention-for-robot_localization/
+#https://answers.ros.org/question/298415/imu-data-to-be-used-with-robot_localization/
 imu0: imu/data
 imu0_config: [false, false, false,
               true,  true,  true,
@@ -37,4 +42,5 @@ imu0_config: [false, false, false,
 imu0_queue_size: 10
 imu0_nodelay: false
 imu0_differential: false
+#imu0_relative: true # gia na exoume roll pitch yaw se sxesi me arxiki katastasi??
 imu0_remove_gravitational_acceleration: true
