--- a/kymco_maxxer90_navigation/config/ekf_localization.yaml
+++ b/kymco_maxxer90_navigation/config/ekf_localization.yaml
@@ -2,9 +2,12 @@ odom_frame: odom
 base_link_frame: base_link
 world_frame: odom
 
-two_d_mode: true #false
-
+two_d_mode: true    # true <=> 0 at z, roll, pitch, vz, vroll, vpitch, az and fuses them
+#dynamic_process_noise_covariance: true
 frequency: 50
+
+# configuration order -> [x, y, z, roll, pitch, yaw, vx, vy, vz, vroll, vpitch, vyaw, ax, ay, az]
+# non-holonomic robot -> output should have vy, ay = 0
 
 odom0: odometry/gps
 odom0_config: [true,  true,  false,
@@ -16,9 +19,9 @@ odom0_queue_size: 10
 odom0_nodelay: false
 odom0_differential: true
 
-odom1: mono_odometer/odometry
+odom1: odometry/vo
 odom1_config: [true,  true,  false,
-               false, false, false,
+               false, false, true,
                false, false, false,
                false, false, false,
                false, false, false]
@@ -28,11 +31,12 @@ odom1_differential: true
 
 imu0: imu/data
 imu0_config: [false, false, false,
-              true,  true,  true,
+              false, false, true,
               false, false, false,
-              true,  true,  true,
-              true,  true,  true]
+              false, false, true,
+              true,  false, false]
 imu0_queue_size: 10
 imu0_nodelay: false
 imu0_differential: false
+imu0_relative: true
 imu0_remove_gravitational_acceleration: true
