Added some dependencies

--- a/kymco_maxxer90_navigation/package.xml
+++ b/kymco_maxxer90_navigation/package.xml
@@ -14,5 +14,7 @@
   <depend>global_planner</depend>
   <depend>sbpl_lattice_planner</depend>
   <depend>teb_local_planner</depend>
-
+  <depend>image_proc</depend>
+  <depend>rtabmap_ros</depend>
+  <depend>move_base</depend>
 </package>
