--- a/kymco_maxxer90_navigation/config/ekf_localization.yaml
+++ b/kymco_maxxer90_navigation/config/ekf_localization.yaml
@@ -10,14 +10,14 @@ ekf_vo_imu:
 
     imu0: imu/data
     imu0_config: [false, false, false,
-                  true, true, true,
+                  true,  true,  true,
                   false, false, false,
-                  true, true, true,
+                  true,  true,  true,
                   true,  true,  true]
     imu0_queue_size: 10
     imu0_nodelay: true
-    imu0_differential: false
     imu0_relative: false
+    imu0_differential: false
     imu0_remove_gravitational_acceleration: true
 
     odom0: odometry/vo
@@ -43,14 +43,14 @@ ekf_loc:
 
     imu0: imu/data
     imu0_config: [false, false, false,
-                  true, true, true,
+                  true,  true,  true,
                   false, false, false,
-                  true, true, true,
+                  true,  true,  true,
                   true,  true,  true]
     imu0_queue_size: 10
     imu0_nodelay: true
-    imu0_differential: false
     imu0_relative: false
+    imu0_differential: false
     imu0_remove_gravitational_acceleration: true
 
     odom0: odometry/vo_imu
@@ -75,3 +75,13 @@ ekf_loc:
     odom1_relative: false
     odom1_differential: false
 
+    #odom2: odometry/icp
+    #odom2_config: [true,  true,  false,
+    #               false, false, true,
+    #               false, false, false,
+    #               false, false, false,
+    #               false, false, false]
+    #odom2_queue_size: 10
+    #odom2_nodelay: false
+    #odom2_relative: false
+    #odom2_differential: true
