--- a/kymco_maxxer90_navigation/config/base_local_planner_params.yaml
+++ b/kymco_maxxer90_navigation/config/base_local_planner_params.yaml
@@ -5,7 +5,7 @@ TebLocalPlannerROS:
     # Trajectory
 
     teb_autosize: True
-    dt_ref: 0.3
+    dt_ref: 0.4 # https://github.com/rst-tu-dortmund/teb_local_planner/issues/92
     dt_hysteresis: 0.1
     max_samples: 500
     global_plan_overwrite_orientation: True
