--- a/kymco_maxxer90_navigation/config/local_costmap_params.yaml
+++ b/kymco_maxxer90_navigation/config/local_costmap_params.yaml
@@ -12,8 +12,9 @@ local_costmap:
     height: 5.0
 
     plugins:
+        - {name: static_layer,      type: "costmap_2d::StaticLayer"} # sould i use it?
         - {name: obstacle_layer,    type: "costmap_2d::ObstacleLayer"}
 
     obstacle_layer:
-        track_unknown_space: true
+        track_unknown_space: false # no static map -> true
         combination_method: 1
