--- a/kymco_maxxer90_bringup/package.xml
+++ b/kymco_maxxer90_bringup/package.xml
@@ -10,5 +10,9 @@
 
 
   <buildtool_depend>catkin</buildtool_depend>
+  <depend>roscpp</depend>
+  <depend>serial</depend>
+  <depend>hardware_interface</depend>
+
 
 </package>
