Steps towards hardware_interface integration

--- a/kymco_maxxer90_bringup/CMakeLists.txt
+++ b/kymco_maxxer90_bringup/CMakeLists.txt
@@ -6,19 +6,22 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
     roscpp
     serial
+    sensor_msgs
+    geometry_msgs
+    controller_manager
     hardware_interface
 )
 
 catkin_package(
-    # INCLUDE_DIRS include
+    INCLUDE_DIRS include
     CATKIN_DEPENDS roscpp serial hardware_interface 
 )
 
 include_directories(
-    # include
+    include
     ${catkin_INCLUDE_DIRS}
 )
 
-add_executable(motor_controller src/motor_controller.cpp )
+add_executable(motor_controller src/motor_controller.cpp src/kymco_maxxer90_hw.cpp)
 target_link_libraries(motor_controller ${catkin_LIBRARIES})
 
