--- a/kymco_maxxer90_bringup/CMakeLists.txt
+++ b/kymco_maxxer90_bringup/CMakeLists.txt
@@ -6,6 +6,7 @@ add_compile_options(-std=c++11)
 find_package(catkin REQUIRED COMPONENTS
     roscpp
     serial
+    nav_msgs
     sensor_msgs
     geometry_msgs
     controller_manager
