--- a/kymco_maxxer90_bringup/package.xml
+++ b/kymco_maxxer90_bringup/package.xml
@@ -12,6 +12,7 @@
   <buildtool_depend>catkin</buildtool_depend>
   <depend>roscpp</depend>
   <depend>serial</depend>
+  <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>controller_manager</depend>
