--- a/kymco_maxxer90_navigation/config/costmap_common_params.yaml
+++ b/kymco_maxxer90_navigation/config/costmap_common_params.yaml
@@ -2,7 +2,8 @@ footprint: [ [0.65, -0.425], [-1.0, -0.425], [-1.0, 0.425], [0.65, 0.425] ]
 transform_tolerance: 0.7
 
 obstacle_layer:
-    max_obstacle_height: 1.0  # should be a little higher than the robot's height
+    max_obstacle_height: 1.3  # should be a little higher than the robot's height
+    min_obstacle_height: 0.3
     obstacle_range: 4.5
     raytrace_range: 5.0       # also check parameter "Grid/RangeMax" at rtabmap_mapping.launch
     footprint_clearing_enabled: true
