Only dynamic map with bigger fov

--- a/kymco_maxxer90_navigation/config/global_costmap_params.yaml
+++ b/kymco_maxxer90_navigation/config/global_costmap_params.yaml
@@ -1,13 +1,15 @@
 global_costmap:
-    global_frame: map
+    global_frame: odom #map
     robot_base_frame: base_link
     update_frequency: 5.0 #1.0
     publish_frequency: 1.0 # for visualization, else 0.0
-    static_map: true
-    rolling_window: false
+    static_map: false #true
+    rolling_window: true #false
+    width: 25.0
+    height: 25.0
 
     plugins:
-        - {name: static_layer,      type: "costmap_2d::StaticLayer"}
+        #- {name: static_layer,      type: "costmap_2d::StaticLayer"}
         - {name: obstacle_layer,    type: "costmap_2d::VoxelLayer"}
         - {name: inflation_layer,   type: "costmap_2d::InflationLayer"}
 
