--- a/kymco_maxxer90_bringup/config/twist_mux.yaml
+++ b/kymco_maxxer90_bringup/config/twist_mux.yaml
@@ -3,6 +3,10 @@ topics:
   topic   : joy_teleop/cmd_vel
   timeout : 0.5
   priority: 10
+- name    : insanity
+  topic   : /insanity/cmd_vel
+  timeout : 0.5
+  priority: 3
 - name    : autonomy
   topic   : /move_base/cmd_vel
   timeout : 0.5
